tests/baselines/reference/typeTagPrototypeAssignment.errors.txt
bug27327.js(4,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== bug27327.js (1 errors) ====
    function C() {
    }
    /** @type {string} */
    C.prototype = 12
    ~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    